--- a/kops-terraform-terrascan/config/env.tfvars.example
+++ b/kops-terraform-terrascan/config/env.tfvars.example
@@ -18,7 +18,7 @@ kops_cluster =  {
   max_worker_nodes = 5
   master_node_type  = "t3.medium"
   region = "us-west-2"
-  state_bucket = "kops-state-nclouds" # Replace with your own
+  state_bucket = "kops-state-accurics" # Replace with your own
   node_image = "099720109477/ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-20210415"
   nodes = [
     {
