--- a/remediation-kubernetes-helm-docker/kubeyaml/backend.yaml
+++ b/remediation-kubernetes-helm-docker/kubeyaml/backend.yaml
@@ -1,13 +1,19 @@
+annotations:
+  seccomp.security.alpha.kubernetes.io/pod: "docker/default" 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-dpl
 spec:
-  replicas: 1
-  selector:
+securityContext:
+    runAsUser: 1000
+    runAsGroup: 3000
+    fsGroup: 2000
+replicas: 1
+selector:
     matchLabels:
       app: backend
-  template:
+template:
     metadata:
       labels:
         app: backend
@@ -35,9 +41,8 @@ spec:
           ports:
             - containerPort: 8080
           securityContext:
+              runAsUser: 2000
               allowPrivilegeEscalation: false
-              runAsNonRoot: true
-              readOnlyRootFilesystem: true
               seccompProfile:
                   type: RuntimeDefault
 
